# python-ci

./: LICENSE  README.md  publish.yaml
.github/workflows/: _build.yaml  _check.yaml  _ci_tests.yaml  _publish.yaml  _release.yaml  _test.yaml  build.yaml  check-test-build.yaml  check.yaml  ci-tests.yaml  ci-tox.yaml  ci-workflow-pytest.yaml  ci-workflow-tox.yaml  ci-workflow.yaml  code-check.yaml  github-release.yaml  publish.yaml  release.yaml  test-pytest.yaml  test-tox.yaml  test.yaml
actions/config/: action.yaml
actions/publish/: action.yaml
examples/: ci-release.yaml  ci-tests.yaml  ci.yaml  publish.yaml  pyproject.toml
publish/: action.yaml
setup/: action.yml
